[package]
name = "backend"
version = "0.1.0"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0.38"
hyper = { version = "0.14.4", features = ["full"] }
serde_json = "1.0.62"
